--- a/Credit_card_Default_Project.ipynb
+++ b/Credit_card_Default_Project.ipynb
@@ -7245,6 +7245,14 @@
           "text": [
             "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/joblib/externals/loky/process_executor.py:705: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+            "  \"timeout or by a memory leak.\", UserWarning\n"
+          ]
         }
       ],
       "source": [
